[package]
name = "rawtime"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1.1", features = ["nightly", "spin_no_std"] }
x86 = "0.13"
log = "0.4.6"

[target.'cfg(not(target_os = "none"))'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
env_logger = "0.6.0"
