[package]
name = "rawtime"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Basic timing infrastructure for no_std (currently x86 only) platforms"
keywords = ["no_std", "x86", "time"]

[dependencies]
lazy_static = { version = "1.3", features = ["spin_no_std"] }
x86 = "0.23"
log = "0.4.6"

[target.'cfg(not(target_os = "none"))'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
env_logger = "0.6.0"
